Attaching fragment to main activity.

--- a/app/src/main/res/layout/activity_main_series.xml
+++ b/app/src/main/res/layout/activity_main_series.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainSeriesActivity">
+    tools:context=".ui.main.MainSeriesActivity">
 
     <FrameLayout
         android:id="@+id/mainSeriesFragment"
@@ -13,7 +13,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/mainSearchView"/>
 
-    <SearchView
+    <android.support.v7.widget.SearchView
         android:id="@+id/mainSearchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
