--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,9 +10,8 @@
 
 
     <!-- Serie Information Style-->
-    <style name="SeriesINformation">
+    <style name="SeriesInformation">
         <item name="android:textSize">24sp</item>
-        <item name="android:gravity">center_horizontal</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:padding">16dp</item>
