--- a/app/src/main/res/layout/fragment_seasons.xml
+++ b/app/src/main/res/layout/fragment_seasons.xml
@@ -36,7 +36,7 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/seasonsRecycler"
-            android:layout_height="0dp"
+            android:layout_height="match_parent"
             android:layout_width="match_parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
