Fixing minor visual details and bugs.

--- a/app/src/main/res/layout/activity_specifications.xml
+++ b/app/src/main/res/layout/activity_specifications.xml
@@ -48,6 +48,7 @@
         <TextView
             android:id="@+id/episodeSerieOfficialSite"
             style="@style/SeriesInformation"
+            android:textColor="#2979ff"
             android:text="Official Site: " />
 
         <FrameLayout
